# async-tokio-template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: Cargo.toml  Dockerfile  README.md
{{ cookiecutter.project_name }}/src/: main.rs
