[package]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime + Utilities
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
eyre = "0.6"
color-eyre = "0.6"
arc-swap = "1.5"

# Serialization & Configuration
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.5"
clap = { version = "3.1", features= ["derive"] }
